--- a/M9_Final_Assignment.ipynb
+++ b/M9_Final_Assignment.ipynb
@@ -44,6 +44,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shannon Gallant Ansari"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1237,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
